--- a/_config.yml
+++ b/_config.yml
@@ -236,6 +236,7 @@ exclude:
   - _pages/cv.md
   - _pages/projects.md
   - _pages/teaching.md
+  - _pages/dropdown.md
   - purgecss.config.js
   - README.md
   - readme_preview/
