--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,12 +1,10 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - ys-zong
 
 github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
+  - ys-zong/MEDFAIR
+  - ys-zong/awesome-self-supervised-multimodal-learning
+  - ys-zong/FoolyourVLLMs
+  - ys-zong/VLGuard
+  - ys-zong/VL-ICL
+  - ys-zong/conST
