--- a/_config.yml
+++ b/_config.yml
@@ -237,6 +237,7 @@ exclude:
   - _pages/projects.md
   - _pages/teaching.md
   - _pages/dropdown.md
+  - _pages/profiles.md
   - purgecss.config.js
   - README.md
   - readme_preview/
