--- a/_config.yml
+++ b/_config.yml
@@ -306,8 +306,8 @@ display_categories: ["external-services"] # these categories will be displayed o
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Zong]
+  first_name: [Yongshuo]
 
   style: apa
   locale: en
