--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ repo_trophies:
 # will use title and url fields
 # Take a look to https://github.com/jekyll/jekyll-feed for more customization
 
-rss_icon: true
+rss_icon: false
 
 # -----------------------------------------------------------------------------
 # Layout
@@ -85,7 +85,7 @@ github_username: ys-zong # your GitHub user name
 #keybase_username: # your keybase user name
 #lastfm_id: # your lastfm id
 #lattes_id: # your ID on Lattes (Brazilian Lattes CV)
-linkedin_username: # your LinkedIn user name
+linkedin_username: yongshuo-zong-738732186 # your LinkedIn user name
 #mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 #medium_username: # your Medium username
 #orcid_id: # your ORCID ID
