--- a/_config.yml
+++ b/_config.yml
@@ -327,8 +327,8 @@ scholar:
   details_link: Details
 
   query: "@*"
-  group_by: year
-  group_order: descending
+  #group_by: year
+  #group_order: descending
 
 # Display different badges withs stats for your publications
 enable_publication_badges:
